# video-in-sentences-out

./: Chase1_A1_C1_Act1_4_PARK1_ML_MIDD_DARK_4433d840-c5af-11df-bed3-e80688cb869a.mov  LICENSE  QobiScheme-makefile  QobiScheme.tar.Z  README.md  architecture-path  archive-date  build-amd64  dot-bashrc  install-amd64  packages.sh  run  scc  scmman
darpa-collaboration/documentation/: C-D1-recognition-annotations.csv  C-E1-description-annotations.csv  C-E1-recognition-annotations.csv  darpa-corpora.text
darpa-collaboration/event-hmms/: event-models-200.text  pose-codebook.sc
darpa-collaboration/event-hmms/hmms/: hmm-1-200-approach-discrete.sc  hmm-1-200-arrive-discrete.sc  hmm-1-200-attach-discrete.sc  hmm-1-200-bounce-discrete.sc  hmm-1-200-bury-discrete.sc  hmm-1-200-carry-discrete.sc  hmm-1-200-catch-discrete.sc  hmm-1-200-chase-discrete.sc  hmm-1-200-close-discrete.sc  hmm-1-200-collide-discrete.sc  hmm-1-200-dig-discrete.sc  hmm-1-200-drop-discrete.sc  hmm-1-200-enter-discrete.sc  hmm-1-200-exchange-discrete.sc  hmm-1-200-exit-discrete.sc  hmm-1-200-fall-discrete.sc  hmm-1-200-flee-discrete.sc  hmm-1-200-fly-discrete.sc  hmm-1-200-follow-discrete.sc  hmm-1-200-get-discrete.sc  hmm-1-200-give-discrete.sc  hmm-1-200-go-discrete.sc  hmm-1-200-hand-discrete.sc  hmm-1-200-haul-discrete.sc  hmm-1-200-have-discrete.sc  hmm-1-200-hit-discrete.sc  hmm-1-200-hold-discrete.sc  hmm-1-200-jump-discrete.sc  hmm-1-200-kick-discrete.sc  hmm-1-200-leave-discrete.sc  hmm-1-200-lift-discrete.sc  hmm-1-200-move-discrete.sc  hmm-1-200-open-discrete.sc  hmm-1-200-pass-discrete.sc  hmm-1-200-pick-up-discrete.sc  hmm-1-200-push-discrete.sc  hmm-1-200-put-down-discrete.sc  hmm-1-200-raise-discrete.sc  hmm-1-200-receive-discrete.sc  hmm-1-200-replace-discrete.sc  (+56 more)
darpa-collaboration/ffmpeg/: ffmpeg-bindings.c  ffmpeg-bindings.h  ffmpeg-matlab.c  ffmpegCloseVideo.m  ffmpegExpandVideo.m  ffmpegGetFrame.m  ffmpegGetFrameN.m  ffmpegIsFinished.m  ffmpegNextFrame.m  ffmpegOpenVideo.m  makefile
darpa-collaboration/ideas/: analyze.sc  animate-annotations-essa.sc  animate-annotations.sc  annotation-gui-essa.sc  annotation-gui-limbs.sc  annotation-gui-superpixels.sc  annotation-gui-tracks.sc  annotation-gui-turbopixels.sc  annotation-gui-video-quality.sc  annotation-gui.sc  background_gmm.cpp  berkeley.sc  cluster-label.sc  compute-chains.sc  compute-optical-flow.sc  describe-video.sc  detector-svm-train.sc  dir_regexp.m  distance-transform.sc  dsci.sc  feature-vector-plot.sc  feature-vectors.sc  generate-cropped-images.sc  generate-jobs.sc  generate-single-frame-slic.sc  generate-superpixels-essa.sc  generate-superpixels-slic.sc  generate-superpixels-turbopixels.sc  hk-means.sc  hmm-control.c  hmm-control.h  hmm-data.c  hmm-data.h  hmm-rand.c  hmm-rand.h  hmm-train-classify.sc  hmm-wbm.sc  hmm.c  hmm.h  idea.text  (+85 more)
darpa-collaboration/ideas/cuklt/: CMakeLists.txt  Makefile.inc2  Makefile.tc  README.txt  build_cuklt.sh  run-cuklt.sh  run-dsci.sh  run-oldklt.sh  run-viterbi.sh
darpa-collaboration/ideas/cuklt/src/: CMakeLists.txt  Makefile.tc  cuda_feature_select.cxx  cuda_image_align.cu  cuklt.cpp  cuklt.h  cukltLibTester.cxx  featurePool.cxx  featurePool.h  featureTrack.h  ff-light.c  imageAlign.cxx  main_tracker.cxx  per-frame-klt.cxx  per-video-klt.cxx  playback_tracker.cxx  render-klt-result.cxx
darpa-collaboration/lib/: libavformat.so.52.7.0
darpa-collaboration/pkg/: liblpsolve55.so.0
darpa-collaboration/splines/: examples.m  read_fit_open_spline_and_write.m  splinefit.m
darpa-collaboration/voc4-models/: bag.mat  ball.mat  baseball-bat.mat  bench.mat  bicycle.mat  big-ball.mat  bucket.mat  cage.mat  car.mat  cardboard-box.mat  cart.mat  chair.mat  closet.mat  dog.mat  door.mat  garbage-can.mat  giraffe.mat  golf-club.mat  gun.mat  ladder.mat  mailbox.mat  microwave.mat  motorcycle.mat  person-crawl.mat  person-crouch.mat  person-down.mat  person-wheelbarrow.mat  person.mat  pogo-stick.mat  pylon.mat  rake.mat  shovel.mat  sign.mat  skateboard.mat  small-ball.mat  suv.mat  table.mat  toy-truck.mat  trailer.mat  trash-bag.mat  (+2 more)
scheme2c/scrt/: callcc.c  cio.c  cio.h  heap.c  heap.h  objects.c  objects.h  old-heap  options.h  predef.sc  scdebug.c  scdebug.sc  sci.c  scinit.c  screp.c
scheme2c/scsc/: main.c  main.sc  makefile
(+107 files in other folders)
